[package]
name = "samn-common"
version = "0.1.0"
edition = "2021"

[dependencies]
heapless = {version = "0.7", features = ["serde"]}
serde = {version = "1.0.197", default-features = false}
postcard = {git = "https://github.com/jamesmunns/postcard.git"}
embedded-hal = "1"
cc1101 = {path = "./cc1101"}
nrf24 = {path = "./nrf24"}
nb = "1.1.0"

[dependencies.sonnerie]
git = "https://github.com/rubend056/sonnerie.git"
branch = "master"
optional = true

[features]
std = []
sonnerie = ["dep:sonnerie", "std"]
